// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context predecessors function fetchPredecessors should perform exactly one query when enough hits are returned 1`] = `
Array [
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259200000002,
      "sort": Array [
        259200000002,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259200000001,
      "sort": Array [
        259200000001,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259200000000,
      "sort": Array [
        259200000000,
        0,
      ],
    },
  },
]
`;

exports[`context predecessors function fetchPredecessors should perform multiple queries until the expected hit count is returned 1`] = `
Array [
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 103680000000,
      "sort": Array [
        103680000000,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 95040000000,
      "sort": Array [
        95040000000,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 86400000000,
      "sort": Array [
        86400000000,
        0,
      ],
    },
  },
]
`;

exports[`context predecessors function fetchPredecessors should perform multiple queries with the last being unrestricted when too few hits are returned 1`] = `
Array [
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 260064000000,
      "sort": Array [
        260064000000,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259372800000,
      "sort": Array [
        259372800000,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259200000000,
      "sort": Array [
        259200000000,
        0,
      ],
    },
  },
]
`;

exports[`context predecessors function fetchPredecessors with useNewFieldsApi set should perform exactly one query when enough hits are returned 1`] = `
Array [
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259200000002,
      "sort": Array [
        259200000002,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259200000001,
      "sort": Array [
        259200000001,
        0,
      ],
    },
  },
  Object {
    "flattened": Object {},
    "id": "::::",
    "isAnchor": undefined,
    "raw": Object {
      "@timestamp": 259200000000,
      "sort": Array [
        259200000000,
        0,
      ],
    },
  },
]
`;
